--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,7 +20,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .navbar div:not(:first-child) {
+  .navbar div.navbar-button:not(:first-child) {
     display: none;
   }
 
@@ -29,18 +29,18 @@
     float: right;
   }
 
-  .navbar.responsive {
+  .navbar.expanded {
     flex-direction: column-reverse;
     position: relative;
   }
 
-  .navbar.responsive div.navbar-toggle {
+  .navbar.expanded div.navbar-toggle {
     position: absolute;
     bottom: 0;
     right: 0;
   }
 
-  .navbar.responsive div {
+  .navbar.expanded div.navbar-button {
     float: none;
     display: block;
     text-align: left;
