--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,8 +11,13 @@
   overflow: hidden;
 }
 
-.navbar div {
+.navbar div.navbar-button {
   padding: 1em;
+  font-size: medium;
+}
+
+.navbar div.navbar-button:first-child {
+  padding-left: 0;
 }
 
 .navbar div.navbar-toggle {
@@ -43,6 +48,21 @@
   .navbar.expanded div.navbar-button {
     float: none;
     display: block;
-    text-align: left;
+    padding: 0;
   }
+}
+
+.text-post {
+  display: flex;
+  margin-top: 1em;
+  flex-wrap: wrap;
+}
+
+.text-content {
+  max-width: 680px;
+  margin: 0 0 0 auto;
+}
+
+.text-metadata {
+  font-family: Arial, Helvetica, sans-serif;
 }
