--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,14 @@ body {
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
   color: #7D7D7D;
+  font-size: large;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+  max-width: 400px;
+  margin: 0 0 2em 0;
 }
 
 a {
