--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,10 +6,28 @@
 .navbar-home {
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
+  -webkit-font-smoothing: antialiased;
 }
 
 .navbar-button {
   margin: 0 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+  -webkit-font-smoothing: antialiased;
+}
+
+.block-header {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+  -webkit-font-smoothing: antialiased;
+}
+
+.text-index-page-container {
+  display: grid;
+  gap: 1rem;
+}
+
+.text-index-page-metadata-sans {
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
 }
@@ -27,4 +45,31 @@
 
 .text-metadata {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+/* No media query for `xs` since this is the default in Bootstrap */
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .text-index-page-container {
+    padding-top: 1rem;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .text-index-page-container {
+    padding-top: 2rem;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  
 }
