--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,28 +3,39 @@
   margin: 0 auto;
 }
 
-.navbar-home {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: medium;
-  -webkit-font-smoothing: antialiased;
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
 }
 
 .navbar-button {
-  margin: 0 1em;
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
   -webkit-font-smoothing: antialiased;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.navbar .navbar-button:not(:first-child) {
+  margin-left: 2rem;
+}
+
+.post-groups-container {
+  display: grid;
+  gap: 1rem;
+  padding-top: 2rem;
+}
+
+.post-group {
+  display: grid;
+  grid-template-columns: 1fr 9fr;
 }
 
 .block-header {
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
   -webkit-font-smoothing: antialiased;
-}
-
-.text-index-page-container {
-  display: grid;
-  gap: 1rem;
 }
 
 .text-index-page-metadata-sans {
@@ -48,11 +59,23 @@
 }
 
 /* Extra small devices (portrait phones, less than 576px) */
-/* No media query for `xs` since this is the default in Bootstrap */
+@media (max-width: 576px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navbar .navbar-button:not(:first-child) {
+    display: none;
+  }
+
+  .navbar.expanded .navbar-button {
+    display: block;
+  }
+}
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -71,5 +94,4 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  
 }
