--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,11 +3,13 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
-  color: #7D7D7D;
+  color: #7d7d7d;
   font-size: large;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
 }
@@ -33,6 +35,10 @@ h2 ~ p {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+a:hover {
+  color: #b59aff;
 }
 
 * {
