--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,11 +27,6 @@
   padding-top: 2rem;
 }
 
-.post-group {
-  display: grid;
-  grid-template-columns: 1fr 9fr;
-}
-
 .block-header {
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
@@ -60,9 +55,17 @@
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 576px) {
+  .main {
+    margin: 0.2rem 0.5rem;
+  }
+
   .navbar {
     display: flex;
     flex-direction: column;
+  }
+
+  .navbar-button {
+    margin: 0.2rem 0;
   }
 
   .navbar .navbar-button:not(:first-child) {
@@ -71,11 +74,24 @@
 
   .navbar.expanded .navbar-button {
     display: block;
+    margin: 0.2rem 0;
   }
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+  .post-group {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+  }
+
+  .post-year {
+    grid-column: span 1;
+  }
+
+  .post-metadata {
+    grid-column: span 9;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
