--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,7 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .navbar-button {
@@ -21,10 +21,13 @@
   margin-left: 2rem;
 }
 
+.page-container {
+  padding-top: 2rem;
+}
+
 .post-groups-container {
   display: grid;
   gap: 1rem;
-  padding-top: 2rem;
 }
 
 .block-header {
@@ -51,6 +54,11 @@
 
 .text-metadata {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.image-list-container {
+  display: flex;
+  height: 2rem;
 }
 
 /* Extra small devices (portrait phones, less than 576px) */
