--- a/components/TextMarkdown/TextMarkdownStyles.module.css
+++ b/components/TextMarkdown/TextMarkdownStyles.module.css
@@ -1,3 +1,10 @@
 .img {
   width: min(30em, 100%);
+  padding: 1rem;
+}
+
+.figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
