--- a/pages/texts/textsStyles.module.css
+++ b/pages/texts/textsStyles.module.css
@@ -1,14 +1,36 @@
 .text-post {
-  display: flex;
-  margin-top: 1em;
-  flex-wrap: wrap;
-}
-
-.text-content {
-  max-width: 680px;
-  margin: 0 0 0 auto;
+  margin-top: 1rem;
+  display: grid;
+  gap: 2rem;
 }
 
 .text-metadata {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.text-note {
+  padding-top: 1rem;
+  font-size: small;
+}
+
+@media (max-width: 575px) {
+  .text-note {
+    display: none;
+  }
+}
+
+@media (min-width: 576px) {
+  .text-post {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+  }
+
+  .text-content {
+    grid-column: span 8;
+  }
+
+  .text-metadata {
+    font-family: Arial, Helvetica, sans-serif;
+    grid-column: span 2;
+  }
 }
