--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ h1 {
   font-weight: lighter;
   -webkit-font-smoothing: antialiased;
   max-width: 500px;
-  margin: 0 0 2em 0;
+  margin: 0 0 1.5em 0;
 }
 
 h2 {
@@ -59,6 +59,10 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+button {
+  cursor: pointer;
 }
 
 * {
