--- a/components/ImageSlider/ImageSliderStyles.module.css
+++ b/components/ImageSlider/ImageSliderStyles.module.css
@@ -78,3 +78,43 @@
 .button-controller.active {
   background-color: black;
 }
+
+.overlay-background {
+  height: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-x: hidden;
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+}
+
+.overlay-background.active {
+  height: 100%;
+  opacity: 1;
+}
+
+.overlay-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.slide-fullscreen {
+  height: 95%;
+}
+
+.slide-fullscreen .img {
+  padding: 0;
+}
+
+.overlay-buttons-container {
+  height: 5%;
+  display: flex;
+  justify-content: center;
+  padding-top: 1.5rem;
+}
