--- a/components/ImageTile/ImageTileStyles.module.css
+++ b/components/ImageTile/ImageTileStyles.module.css
@@ -1,10 +1,10 @@
-.work-tile {
+.image-tile {
   width: 10rem;
   background-color: white;
   filter: grayscale(100%) opacity(0.5);
 }
 
-.work-tile:hover {
+.image-tile:hover {
   filter: none;
 }
 
@@ -14,6 +14,6 @@
   object-fit: contain;
 }
 
-.work-title {
+.image-title {
   text-align: right;
 }
