Update h2 styling and anchor tag behaviour

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,8 @@ h1 {
 
 h2 {
   font-size: larger;
-  font-weight: lighter;
+  font-weight: normal;
+  -webkit-font-smoothing: antialiased;
   margin-top: 0;
 }
 
